--- a/mini-server/.gitignore
+++ b/mini-server/.gitignore
@@ -6,10 +6,9 @@ yarn-error.log*
 
 # 环境变量
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 
 # 日志文件
 logs/
